# traits-unit

./: .gitignore  .travis.yml  CMakeLists.txt  MEMO  README.md  TODO  TODO.md  clib.json  package.json  run_tests.sh  valgrind.sh
examples/: example.c  example_2.c  example_fail.c  example_success.c  test_1.c  test_3.c  test_4.c
examples/stack/: stack.c  stack.h  test_stack.c
sources/: traits-unit.c  traits-unit.h
src/: traits-unit.c  traits-unit.h
tests/unit/: build.cmake  test_1.c  test_2.c  test_3.c  test_4.c  test_fail.c  test_signals.c
